# CustomView

./: build.gradle  gradle.properties  readme.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: fir2.c  fir2.h  native-lib.cpp
app/src/main/res/anim/: poptip_scale_left_in.xml  poptip_scale_left_out.xml  poptip_scale_top_in.xml  poptip_scale_top_out.xml
app/src/main/res/drawable/: bg_unable_to_hear_button.xml  button_font_black_sides_round.xml  debug_drawable.xml  enlarge_left_back.xml  enlarge_right_back.xml  ic_left_arrow_back_black.xml  image_button_background.xml  indicator.xml  list_item_back.xml  radial_gradient.xml  red_circle.xml  round_back_press.xml  round_back_release.xml  round_btn.xml  shadow_round_rect.xml  shape_pressed.xml
app/src/main/res/layout/: activity_album_list_test.xml  activity_binding.xml  activity_change_size_indicator.xml  activity_chart.xml  activity_circle_seek_bar.xml  activity_drag_to_load.xml  activity_foldable_linear_layout.xml  activity_frame_layout_test.xml  activity_ftp.xml  activity_hide_head_test.xml  activity_image_check.xml  activity_image_load.xml  activity_layout_param_test.xml  activity_list_view_test.xml  activity_main.xml  activity_media_scan.xml  activity_slide.xml  activity_style_test.xml  activity_surface_view.xml  activity_switch_button.xml  activity_switch_layout.xml  activity_tab_btn.xml  activity_try.xml  activity_view_image.xml  activity_view_pager.xml  activity_view_tag.xml  activity_wave_button.xml  (+9 more)
(+157 files in other folders)
